force-app/main/default/objects/Revision__c/Revision__c.object-meta.xml
<CustomObject>
    <label>Revision</label>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Revision Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revision</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>