force-app/main/default/objects/Revision__c/fields/Date2__c.field-meta.xml
<CustomField>
    <fullName>Date2__c</fullName>
    <formula>Scheduled_Date__c + 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date2</label>
    <type>Date</type>
</CustomField>