force-app/main/default/objects/Revision__c/fields/Date3__c.field-meta.xml
<CustomField>
    <fullName>Date3__c</fullName>
    <formula>Scheduled_Date__c + 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date3</label>
    <type>Date</type>
</CustomField>