force-app/main/default/objects/Revision__c/fields/Date4__c.field-meta.xml
<CustomField>
    <fullName>Date4__c</fullName>
    <formula>Scheduled_Date__c + 90</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date4</label>
    <type>Date</type>
</CustomField>