force-app/main/default/objects/Revision__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <label>Reference</label>
    <type>Url</type>
</CustomField>